# resilient-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci.yml
code-examples/: Cargo.toml
code-examples/src/: main.rs
code-examples/src/asynchronous/: mod.rs
code-examples/src/synchronous/: mod.rs
resilient-rs/: Cargo.toml
resilient-rs/src/asynchronous/: mod.rs
resilient-rs/src/asynchronous/strategies/: mod.rs
resilient-rs/src/config/: mod.rs
resilient-rs/src/strategies/: mod.rs
resilient-rs/src/synchronous/: mod.rs
src/: lib.rs
src/asynchronous/: mod.rs
src/asynchronous/retry/: mod.rs
src/asynchronous/retry_with_backoff/: mod.rs
src/config/: mod.rs
src/synchronous/: mod.rs
src/synchronous/retry/: mod.rs
src/synchronous/retry_with_backoff/: mod.rs
