[package]
name = "resilient-rs"
version = "0.1.0"
edition = "2024"

description = "A Rust utility library for fault tolerance, including retry strategies, backoff mechanisms, and failure handling."
license = "MIT"
repository = "https://github.com/semicolon-10/resilient-rs.git"
homepage = "https://github.com/semicolon-10/resilient-rs.git"
documentation = "https://docs.rs/resilient-rs"
readme = "README.md"
keywords = ["retry", "fault-tolerance", "backoff", "resilience", "rust"]
categories = ["concurrency", "asynchronous", "rust-patterns"]
authors = ["Your Name <your.email@example.com>"]
exclude = [".github", ".gitignore", "tests/"]

[dependencies]
