[package]
name = "resilient-rs"
version = "0.4.0"
edition = "2024"

description = "A Rust utility library for fault tolerance, including retry strategies, backoff mechanisms, and failure handling."
license = "MIT"
repository = "https://github.com/semicolon-10/resilient-rs.git"
homepage = "https://github.com/semicolon-10/resilient-rs.git"
documentation = "https://docs.rs/resilient-rs"
readme = "README.md"
keywords = ["retry", "fault-tolerance", "backoff", "resilience", "rust"]
categories = ["concurrency", "asynchronous", "rust-patterns"]
authors = ["semicolon702@gmail.com"]
exclude = [".github", ".gitignore"]

[dependencies]
log = "0.4.26"
tokio = {version = "1.43.0", features = ["time"]}

[dev-dependencies]
tokio = {version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"]}
reqwest = {version = "0.12.12", features = ["json"]}